--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
   <link rel="stylesheet" href="assets/css/styles.css">
 
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -31,6 +33,22 @@
 
   <div class="site-container">
     <div class="menubar">
+      <div class="menu-items">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">What do we do</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Conact Us</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div id="home">
+      <!-- <img src="assets/images/joanna-kosinska-1.jpg" alt="" width="100%"> -->
+    </div>
+
+    <div id="aboutus">
 
     </div>
 
