--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <script src="//code.tidio.co/flbpao2lfk4c2gpewv2m4dcqgwfs4hgm.js" async></script>
 </body>
 
 </html>
