--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <!-- ////////////////////////////////HEADER//////////////////////////////// -->
   <div class="wrapper">
-    <header>
+    <header class="header">
       <!-- Quick Contact Bar -->
       <div class="q-cont">
         <div class="container">
@@ -54,7 +54,7 @@
         <div class="container">
           <div class="flex-box">
             <div class="logo">
-              <a href="index.html"><img src="assets/img/uds-hr-01-02.svg" alt="" width="100%" height="auto"></a>
+              <a href="index.html"><img src="assets/img/uds-hr-01-02.svg" alt="Ubiquity Design Studio Logo" width="100%" height="auto"></a>
             </div>
             <div class="menubar">
               <ul>
@@ -109,44 +109,42 @@
             <a class="button" href="">KNOW MORE</a>
           </div>
         </div>
-      </div>      
+      </div>
+      <div class="downarrow"><a href="#aboutus"><img src="assets/img/mouse-w.svg" alt="" height="100%"></a></div>
     </div>
     <!-- /////////////////////////////////HOME///////////////////////////////// -->
 
     <!-- ///////////////////////////////ABOUT US/////////////////////////////// -->
     <div id="aboutus">
       <div class="container">
-        <div class="about-text-box">
+        <div class="content-middle">
           <div class="abtustext">
-            <p class="bold">ABOUT US</p>
-            <h1>Creative <br> Web Designing</h1>
-            <p>In addition to design and branding, our clients get to enjoy the time tested and refined workflow that is custom tailored to each project!</p>
+            <img src="assets/img/uds-hr-01-01.svg" alt="Ubiquity Design Studio Logo" width="80%">
+            <p class="paratext">The <span class="bold">Ubiquity Design Studio</span> is a start-up company made of like-minded members with a decade of experience in <strong>Graphic Design, Branding, Print Production,and Web Design</strong>. What sets us apart is the ‘idea’ of developing the unique sites for the customers, rather than simply implementing ready-made templates. Each website we develop will be built from scratch so that the website functions optimally all the time with consistent speed. 
+            </p>
             <a class="button" href="">KNOW MORE</a>
           </div>
-          <div class="abtus-techs">
-            <div class="abtus-techs-parts">
-              <h2>Design</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe assumenda minus harum amet voluptatibus. Nam quidem ratione quos itaque et.</p>
-              <a class="button" href="">KNOW MORE</a>
-            </div>
-            <div class="abtus-techs-parts">
-              <h2>Development</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe assumenda minus harum amet voluptatibus. Nam quidem ratione quos itaque et.</p>
-              <a class="button" href="">KNOW MORE</a>
-            </div>
-            <div class="abtus-techs-parts">
-              <h2>Hosting</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe assumenda minus harum amet voluptatibus. Nam quidem ratione quos itaque et.</p>
-              <a class="button" href="">KNOW MORE</a>
-            </div>
-          </div>
+          <div class="abtus-techs"></div>
         </div>
+        <div class="downarrow"><a href="#services"><img src="assets/img/mouse-w.svg" alt="" height="100%"></a></div>
       </div>
     </div>
     <!-- ///////////////////////////////ABOUT US/////////////////////////////// -->
 
     <!-- //////////////////////////////TECHNOLOGY////////////////////////////// -->
-    <div id="techno">
+    <div id="services">
+      <div class="container">
+        <div class="content-middle">
+          <div class="abtustext">
+            <img src="assets/img/uds-hr-01-01.svg" alt="Ubiquity Design Studio Logo" width="80%">
+            <p class="paratext">The <span class="bold">Ubiquity Design Studio</span> is a start-up company made of like-minded members with a decade of experience in <strong>Graphic Design, Branding, Print Production,and Web Design</strong>. What sets us apart is the ‘idea’ of developing the unique sites for the customers, rather than simply implementing ready-made templates. Each website we develop will be built from scratch so that the website functions optimally all the time with consistent speed. 
+            </p>
+            <a class="button" href="">KNOW MORE</a>
+          </div>
+          <div class="abtus-techs"></div>
+        </div>
+        <div class="downarrow"><a href="#services"><img src="assets/img/mouse-b.svg" alt="" height="100%"></a></div>
+      </div>
 
     </div>
     <!-- //////////////////////////////TECHNOLOGY////////////////////////////// -->
