--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <div class="flex-box">
             <div class="contacts">
               <p>
-                <ion-icon class="orange" name="call-outline"></ion-icon><a href="tel:+919663396036">+91 96633 96036</a>
-                <ion-icon class="orange" name="mail-outline"></ion-icon><a href="mailto:info@theubiquity.in">info@theubiquity.in</a>
+                <ion-icon class="orange-icons" name="call-outline"></ion-icon><a href="tel:+919663396036">+91 96633 96036</a>
+                <ion-icon class="orange-icons" name="mail-outline"></ion-icon><a href="mailto:info@theubiquity.in">info@theubiquity.in</a>
               </p>
             </div>
             <div class="smedia">
@@ -50,18 +50,18 @@
         </div>
       </div>
       <!-- Quick Contact Bar -->
-      <menu>
+      <menu class="mainmenu">
         <div class="container">
           <div class="flex-box">
             <div class="logo">
-              <a href="index.html"><img src="assets/img/uds-hr-01-02.svg" alt="Ubiquity Design Studio Logo" width="100%" height="auto"></a>
+              <a href="index.html"><img src="assets/img/uds-hr-01.svg" alt="Ubiquity Design Studio Logo" width="35%" height="auto"></a>
             </div>
             <div class="menubar">
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#aboutus">About Us</a></li>
+                <li><a class="menulinks" href="#">Home</a></li>
+                <li><a class="menulinks" href="#aboutus">About Us</a></li>
                 <li>
-                  <a href="#">Services</a>
+                  <a class="menulinks" href="#">Services</a>
                   <div class="servmenu">
                     <ul>
                       <li><a href="#">Domain Registration</a></li>
@@ -75,7 +75,7 @@
                   </div>
                 </li>
                 <li>
-                  <a href="#">Technology</a>
+                  <a class="menulinks" href="#">Technology</a>
                   <div class="servmenu">
                     <ul>
                       <li><a href="#">Domain Registration</a></li>
@@ -88,8 +88,8 @@
                     </ul>
                   </div>
                 </li>
-                <li><a href="#">Clients</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a class="menulinks" href="#">Clients</a></li>
+                <li><a class="menulinks" href="#">Contact Us</a></li>
               </ul>
             </div>
           </div>
@@ -119,8 +119,9 @@
       <div class="container">
         <div class="content-middle">
           <div class="abtustext">
+            <p class="orange">ABOUT US</p>
             <img src="assets/img/uds-hr-01-01.svg" alt="Ubiquity Design Studio Logo" width="80%">
-            <p class="paratext">The <span class="bold">Ubiquity Design Studio</span> is a start-up company made of like-minded members with a decade of experience in <strong>Graphic Design, Branding, Print Production,and Web Design</strong>. What sets us apart is the ‘idea’ of developing the unique sites for the customers, rather than simply implementing ready-made templates. Each website we develop will be built from scratch so that the website functions optimally all the time with consistent speed. 
+            <p class="paratext">The <span class="bold">Ubiquity Design Studio</span> is a start-up company made of like-minded members with a decade of experience in <strong>Graphic Design, Branding, Print Production, and Web Design</strong>. What sets us apart is the ‘idea’ of developing the unique sites for the customers, rather than simply implementing ready-made templates. Each website we develop will be built from scratch so that the website functions optimally all the time with consistent speed. 
             </p>
             <a class="button" href="">KNOW MORE</a>
           </div>
@@ -135,8 +136,28 @@
     <div id="services">
       <div class="container">
         <div class="content-middle">
-          
-          
+          <div>
+            <h1 class="orange">Services</h1>
+          </div>
+          <div class="service">
+            <h2 class="subhead">Graphic Design</h2>
+            <p class="paratext-dark">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate incidunt corrupti laboriosam pariatur, omnis velit repellat eaque architecto suscipit doloribus.</p>
+            <a class="button-dark" href="">KNOW MORE</a>
+          </div><div class="service">
+            <h2 class="subhead">Branding</h2>
+            <p class="paratext-dark">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate incidunt corrupti laboriosam pariatur, omnis velit repellat eaque architecto suscipit doloribus.</p>
+            <a class="button-dark" href="">KNOW MORE</a>
+          </div>
+          <div class="service">
+            <h2 class="subhead">Web Design</h2>
+            <p class="paratext-dark">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate incidunt corrupti laboriosam pariatur, omnis velit repellat eaque architecto suscipit doloribus.</p>
+            <a class="button-dark" href="">KNOW MORE</a>
+          </div>
+          <div class="service">
+            <h2 class="subhead">Web Hosting</h2>
+            <p class="paratext-dark">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate incidunt corrupti laboriosam pariatur, omnis velit repellat eaque architecto suscipit doloribus.</p>
+            <a class="button-dark" href="">KNOW MORE</a>
+          </div>
         </div>
         <div class="downarrow"><a href="#services"><img src="assets/img/mouse-b.svg" alt="" height="100%"></a></div>
       </div>
