--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
       <menu class="mainmenu">
         <div class="container">
           <div class="flex-box">
-            <div class="logo">
+            <div class="logo1">
               <a href="index.html"><img src="assets/img/uds-hr-01.svg" alt="Ubiquity Design Studio Logo" width="35%" height="auto"></a>
+            </div>
+            <div class="logo2">
+              <a href="index.html"><img src="assets/img/uds-hr-02.svg" alt="Ubiquity Design Studio Logo" width="35%" height="auto"></a>
             </div>
             <div class="menubar">
               <ul>
@@ -64,13 +67,10 @@
                   <a class="menulinks" href="#">Services</a>
                   <div class="servmenu">
                     <ul>
-                      <li><a href="#">Domain Registration</a></li>
-                      <li><a href="#">Linux Hosting</a></li>
-                      <li><a href="#">Website Development</a></li>
-                      <li><a href="#">Website Maintenance</a></li>
-                      <li><a href="#">Website Hosting</a></li>
-                      <li><a href="#">Website Designing</a></li>
-                      <li><a href="#">Website Development</a></li>
+                      <li><a href="#">Web Design</a></li>
+                      <li><a href="#">Graphic Design</a></li>
+                      <li><a href="#">Branding</a></li>
+                      <li><a href="#">Logo Design</a></li>
                     </ul>
                   </div>
                 </li>
@@ -104,7 +104,7 @@
         <div class="home-text">
           <div class="home-text-box">
             <!-- <p>WE ARE NOT JUST ANOTHER WEB DESIGN AENCY</p> -->
-            <h1>Give your business <br> a fresh start</h1>
+            <h1 class="section-h1">Give your business <br> a fresh start</h1>
             <p>We use innovative approach to your business projects</p>
             <a class="button" href="">KNOW MORE</a>
           </div>
@@ -118,14 +118,16 @@
     <div id="aboutus">
       <div class="container">
         <div class="content-middle">
-          <div class="abtustext">
+          <div class="content-left">
             <p class="orange">ABOUT US</p>
-            <img src="assets/img/uds-hr-01-01.svg" alt="Ubiquity Design Studio Logo" width="80%">
+            <img src="assets/img/uds-hr-01.svg" alt="Ubiquity Design Studio Logo" width="80%">
             <p class="paratext">The <span class="bold">Ubiquity Design Studio</span> is a start-up company made of like-minded members with a decade of experience in <strong>Graphic Design, Branding, Print Production, and Web Design</strong>. What sets us apart is the ‘idea’ of developing the unique sites for the customers, rather than simply implementing ready-made templates. Each website we develop will be built from scratch so that the website functions optimally all the time with consistent speed. 
             </p>
             <a class="button" href="">KNOW MORE</a>
           </div>
-          <div class="abtus-techs"></div>
+          <div class="content-right">
+            <img class="img-cover" src="assets/img/client.jpg" alt="">
+          </div>
         </div>
         <div class="downarrow"><a href="#services"><img src="assets/img/mouse-w.svg" alt="" height="100%"></a></div>
       </div>
@@ -136,34 +138,62 @@
     <div id="services">
       <div class="container">
         <div class="content-middle">
-          <div>
-            <h1 class="orange">Services</h1>
-          </div>
-          <div class="service">
-            <h2 class="subhead">Graphic Design</h2>
-            <p class="paratext-dark">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate incidunt corrupti laboriosam pariatur, omnis velit repellat eaque architecto suscipit doloribus.</p>
-            <a class="button-dark" href="">KNOW MORE</a>
-          </div><div class="service">
-            <h2 class="subhead">Branding</h2>
-            <p class="paratext-dark">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate incidunt corrupti laboriosam pariatur, omnis velit repellat eaque architecto suscipit doloribus.</p>
+          <div class="content-left">
+            <p class="orange">WHAT DO WE DO</p>
+            <h1 class="section-h1-orange">Services</h1>
+            <p class="paratext-dark">The <span class="bold">Ubiquity Design Studio</span> is a start-up company made of like-minded members with a decade of experience in <strong>Graphic Design, Branding, Print Production, and Web Design</strong>. What sets us apart is the ‘idea’ of developing the unique sites for the customers, rather than simply implementing ready-made templates. Each website we develop will be built from scratch so that the website functions optimally all the time with consistent speed.</p>
             <a class="button-dark" href="">KNOW MORE</a>
           </div>
-          <div class="service">
-            <h2 class="subhead">Web Design</h2>
-            <p class="paratext-dark">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate incidunt corrupti laboriosam pariatur, omnis velit repellat eaque architecto suscipit doloribus.</p>
-            <a class="button-dark" href="">KNOW MORE</a>
+          <div class="content-right">
+            <div class="right-one-third">
+              <img class="icons" src="assets/img/i-graphic.svg" alt="">
+              <h2>Graphic Design</h2>
+              <p class="paratext-dark">The <span class="bold">Ubiquity Design Studio</span> is a start-up company made of like-minded members with a decade of experience in <strong>Graphic Design, Branding, Print Production, and Web Design</strong>.</p>
+              <a class="button-dark" href="">KNOW MORE</a>
+            </div>
+            <div class="right-one-third">
+              <img class="icons" src="assets/img/i-branding.svg" alt="">
+              <h2>Branding</h2>
+              <p class="paratext-dark">The <span class="bold">Ubiquity Design Studio</span> is a start-up company made of like-minded members with a decade of experience in <strong>Graphic Design, Branding, Print Production, and Web Design</strong>.</p>
+              <a class="button-dark" href="">KNOW MORE</a>
+            </div>
+            <div class="right-one-third">
+              <img class="icons" src="assets/img/i-webdesign.svg" alt="">
+              <h2>Web Development</h2>
+              <p class="paratext-dark">The <span class="bold">Ubiquity Design Studio</span> is a start-up company made of like-minded members with a decade of experience in <strong>Graphic Design, Branding, Print Production, and Web Design</strong>.</p>
+              <a class="button-dark" href="">KNOW MORE</a>
+            </div>
           </div>
-          <div class="service">
-            <h2 class="subhead">Web Hosting</h2>
-            <p class="paratext-dark">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate incidunt corrupti laboriosam pariatur, omnis velit repellat eaque architecto suscipit doloribus.</p>
-            <a class="button-dark" href="">KNOW MORE</a>
-          </div>
+          
         </div>
         <div class="downarrow"><a href="#services"><img src="assets/img/mouse-b.svg" alt="" height="100%"></a></div>
       </div>
 
     </div>
     <!-- //////////////////////////////TECHNOLOGY////////////////////////////// -->
+
+
+    <!-- ////////////////////////////////FOOTER//////////////////////////////// -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-item">
+
+          </div>
+          <div class="footer-item">
+
+          </div>
+          <div class="footer-item">
+
+          </div>
+          <div class="footer-item">
+
+          </div>
+        </div>
+
+      </div>
+    </footer>
+    <!-- ////////////////////////////////FOOTER//////////////////////////////// -->
 
   </div>
 
